utilisation du Redux

--- a/app/globals.css
+++ b/app/globals.css
@@ -40,3 +40,454 @@ a {
     font-size: 01rem;
   }
 }
+
+.home {
+  width: 90%;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  overflow: hidden;
+  padding: 2rem 0;
+}
+
+.home-container {
+  background: #fef2e8;
+  min-height: 90vh;
+}
+
+.home-text {
+  flex: 1;
+  gap: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 0 2rem;
+}
+
+.home-text .btn {
+  align-self: flex-start;
+}
+
+.home-img {
+  flex: 1;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.home-img img {
+  width: 500px;
+  max-width: 100%;
+  border-bottom: 6px solid black;
+  border-right: 8px solid black;
+}
+
+.home-text h1 {
+  font-size: 4rem;
+  font-weight: 700;
+  margin-bottom: 1rem;
+  font-family: "Public Sans", sans-serif;
+}
+
+.home-text p {
+  font-size: 2rem;
+  font-weight: 400;
+  margin-bottom: 1rem;
+  font-family: "Lato", sans-serif;
+  line-height: 1.5;
+}
+
+.btn {
+  background-color: #fadf0c;
+  color: #000;
+  padding: 1rem 2rem;
+  font-size: 1.2rem;
+  font-weight: 700;
+  text-decoration: none;
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
+  border-right: 4px solid black;
+  border-bottom: 6px solid black;
+}
+
+.personal-info {
+  flex: 1;
+  background-color: lightgray; /* Change the background color as desired */
+  padding: 20px;
+}
+
+.skills {
+  flex: 1;
+  padding: 20px;
+}
+
+.skills ul {
+  list-style-type: none;
+}
+
+.skills ul li {
+  margin-bottom: 5px;
+}
+
+@media screen and (max-width: 768px) {
+  .home-text h1 {
+    font-size: 3rem;
+  }
+
+  .btn {
+    width: 100%;
+  }
+
+  .home-text-p {
+    font-size: 1rem;
+  }
+
+  .home {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .home-text {
+    margin-bottom: 2rem;
+    font-size: 1rem;
+  }
+
+  .home-img {
+    justify-content: center;
+  }
+
+  .home-img img {
+    width: 400px;
+  }
+}
+
+.footer {
+  border-top: 1px solid #000;
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+  align-items: center;
+}
+
+.gitlogo,
+.linkedlogo {
+  width: 50px;
+  height: 50px;
+  margin: 10px;
+}
+
+.MonCv {
+  background-color: #fef2e8;
+  min-height: 100vh;
+  padding: 2rem 0;
+}
+
+.page-container {
+  width: 90%;
+  margin: auto;
+  min-height: 90vh;
+  padding: 2rem 0;
+}
+
+.card {
+  background-color: #ffffff;
+  border: 1px solid black;
+  border-right: 4px solid black;
+  border-bottom: 6px solid black;
+  margin-bottom: 2rem;
+}
+
+.card-title {
+  font-size: 2rem;
+  font-weight: 700;
+  font-family: "Public Sans", sans-serif;
+  margin-bottom: 1rem;
+  width: 100%;
+  background-color: #e1b845;
+  padding: 1rem;
+  border-bottom: 3px solid black;
+}
+
+.card-text {
+  font-size: 1.2rem;
+  font-weight: 400;
+  font-family: "Lato", sans-serif;
+  line-height: 1.5;
+  padding: 1rem;
+}
+
+.projets-section {
+  background-color: #fef2e8;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 90vh;
+  width: 80%;
+  margin: auto;
+  background-color: #fef2e8;
+}
+
+.titre {
+  font-size: 4rem;
+  font-weight: 500;
+  font-family: "Public Sans", sans-serif;
+  color: #000;
+  margin: 2rem 0;
+}
+
+.projet {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: #fff;
+  border: 1px solid black;
+  border-bottom: 6px solid black;
+  border-right: 8px solid black;
+  padding: 2rem;
+  max-width: 400px;
+}
+
+.titre-projet {
+  font-size: 2rem;
+  font-weight: 500;
+  font-family: "Public Sans", sans-serif;
+  color: #000;
+  margin-bottom: 2rem;
+}
+
+.titre-techno {
+  font-size: 1.2rem;
+  font-weight: 500;
+  font-family: "Public Sans", sans-serif;
+  color: #000;
+  margin-bottom: 2rem;
+  text-decoration: underline;
+}
+
+.liste-techno {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 0.5rem;
+  align-items: center;
+  margin-bottom: 2rem;
+  list-style: none;
+}
+
+.description {
+  font-size: 1.2rem;
+  font-weight: 500;
+  font-family: "Public Sans", sans-serif;
+  color: #000;
+  margin-bottom: 2rem;
+}
+
+.container-projets {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 2rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+.techno {
+  font-size: 1.2rem;
+  font-weight: 500;
+  font-family: "Public Sans", sans-serif;
+  color: #000;
+  margin-bottom: 2rem;
+  text-decoration: underline;
+}
+
+@media (max-width: 1337px) {
+  .container {
+    width: 90%;
+  }
+
+  .container-projets {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 800px) {
+  .container-projets {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .titre {
+    font-size: 3rem;
+  }
+
+  .projet {
+    padding: 1rem;
+  }
+}
+
+.projet-details {
+  background-color: #fef2e8;
+  padding: 20px;
+  border-radius: 10px;
+  min-height: 100vh;
+}
+
+.projet-details h2 {
+  color: #333;
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.projet-details p {
+  color: #666;
+  font-size: 16px;
+  margin-bottom: 10px;
+}
+
+.projet-details .technos {
+  color: #999;
+  font-size: 14px;
+  margin-bottom: 10px;
+}
+
+.projet-details .close-button {
+  background-color: #ff0000;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.contact {
+  background-color: #fef2e8;
+}
+
+.contact-container {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  min-height: 100vh;
+  width: 80%;
+  margin: auto;
+  padding: 2rem 0;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
+
+label {
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+input,
+textarea {
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+.button {
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.testimonial-form {
+  background-color: #fef2e8;
+  padding: 20px;
+  border-radius: 10px;
+  min-height: 100vh;
+}
+
+.testimonials-list {
+  background-color: #fef2e8;
+  min-height: 100vh;
+}
+
+.testimonial {
+  background-color: #f2f2f2;
+  margin-bottom: 10px;
+}
+
+.testimonial h3 {
+  font-size: 18px;
+  margin-bottom: 5px;
+}
+
+.testimonial p {
+  font-size: 14px;
+}
+
+.ajouter-button {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+}
+
+.message-area {
+  height: 100px;
+}
+
+.testimonials-list {
+  background-color: #fef2e8;
+}
+
+.testimonial {
+  background-color: #ffffff;
+  padding: 10px;
+  width: 80%;
+  margin: auto;
+  border: 1px solid black;
+  border-right: 4px solid black;
+}
+
+.testimonial h3 {
+  font-size: 18px;
+  margin-bottom: 5px;
+}
+
+.testimonial p {
+  font-size: 14px;
+}
+.testimonial-edit-button {
+  background-color: lightgreen;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+
+.testimonial-delete-button {
+  background-color: crimson;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+
+.ajouter-title {
+  font-size: 2rem;
+  font-weight: 500;
+  color: #000;
+  margin-bottom: 2rem;
+  text-align: center !important;
+}
+
+.testimonials-list h1 {
+  font-size: 2rem;
+  color: #000;
+  margin-bottom: 2rem;
+  text-align: center;
+}
